fix contrast

--- a/project/css/small.css
+++ b/project/css/small.css
@@ -7,6 +7,9 @@
     --twhite : #edfafd59;
     font-size: 1.1rem;
 }
+footer a {
+    color: var(--white);
+}
 body{
     background-color: var(--twhite);
 }
